--- a/pendaftaran.html
+++ b/pendaftaran.html
@@ -709,9 +709,9 @@
                         </button> -->
 
                         <!-- create dummy data -->
-                        <button class="button is-primary" @click="if (confirm('Create dummy data ?')) dummy()" >
+                        <!-- <button class="button is-primary" @click="if (confirm('Create dummy data ?')) dummy()" >
                             <span class="icon"><i class="fas fa-plus"></i></span>
-                        </button>
+                        </button> -->
 
                         <!-- reset database -->
                         <button class="button is-danger" @click="resetLocalDatabase()" >
