--- a/pendaftaran.html
+++ b/pendaftaran.html
@@ -303,7 +303,7 @@
                                             <td x-show="tableHeader[3]" x-text="data.nik"></td>
                                             <td x-text="data.nama"></td>
                                             <td x-show="tableHeader[0]" class="has-text-centered" x-text="data.jk"></td>
-                                            <td x-show="tableHeader[1]" class="has-text-centered" x-text="data.jk"></td>
+                                            <td x-show="tableHeader[1]" class="has-text-centered" x-text="data.umur"></td>
                                             <td x-show="tableHeader[2]" x-text="data.alamat"></td>
                                         </tr>
                                     </tbody>
